[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "numpy>=1.14.5",
    "tskit",
    "tqdm",
]
build-backend = "setuptools.build_meta"

[project]
name = "glike"
description = "Stochastic Genealogical likelihood."
classifiers=[
        "Programming Language :: Python :: 3.7",
        "License :: OSI Approved :: MIT License",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords=["coalescence"]
requires-python = ">= 3.9"
dependencies = [
        "numpy>=1.14.5",
        "tskit",
        "tqdm",
    ]
dynamic = ["version"]
authors = [{name = "Caoqi Fan", email = "fcq1116@gmail.com"}]

[project.urls]
Homepage = "https://github.com/Ephraim-usc/glike"


[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.dynamic.version]
attr = "glike.__version__"
